k8s/dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-test
spec:
  selector:
    matchLabels:
      app: project-test
  replicas: 1
  template:
    metadata:
      labels:
        app: project-test
    spec:
      containers:
        - name: project-test
          image: 19990408amine/project-test:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8020
          livenessProbe:
            httpGet:
              path: /home
              port: 8020
            initialDelaySeconds: 30
            timeoutSeconds: 1
