k8s/svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: project-test
  labels:
    app: project-test
spec:
  type: NodePort
  selector:
    app: project-test
  ports:
    - protocol: TCP
      port: 8881
      name: http
