k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
spec:
  rules:
    - host: "amine.project.ma"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: project-test
                port:
                  number: 80
